Overflow issue

--- a/client/stylus/components/QueueBar.styl
+++ b/client/stylus/components/QueueBar.styl
@@ -1,5 +1,6 @@
 .queueBar
   width 0
+  overflow hidden
   position sticky
   top 0
   transition 0.2s width
